compiler/parsing/parser.output
   0  $accept : %entry% $end

   1  implementation : structure EOF

   2  interface : signature EOF

   3  interactive :
   4              | interactive_defs
   5              | seq_expr SEMISEMI

   6  interactive_defs : structure_item SEMISEMI
   7                   | structure_item interactive_defs

   8  structure : structure_tail
   9            | seq_expr structure_tail

  10  structure_tail :
  11                 | SEMISEMI
  12                 | SEMISEMI seq_expr structure_tail
  13                 | SEMISEMI structure_item structure_tail
  14                 | structure_item structure_tail

  15  structure_item : LET rec_flag let_bindings
  16                 | SIGNAL signal_comma_list
  17                 | SIGNAL signal_comma_list DEFAULT par_expr GATHER par_expr
  18                 | SIGNAL signal_comma_list MEMORY par_expr GATHER par_expr
  19                 | TYPE type_declarations
  20                 | EXCEPTION UIDENT constructor_arguments
  21                 | EXCEPTION UIDENT EQUAL constr_longident
  22                 | OPEN UIDENT
  23                 | EXTERNAL DOT LIDENT LIDENT lucky_declarations lucky_declarations EQUAL lucky_files

  24  signature :
  25            | signature signature_item
  26            | signature signature_item SEMISEMI

  27  signature_item : VAL val_ident_colon core_type
  28                 | EXTERNAL val_ident_colon core_type EQUAL primitive_declaration
  29                 | TYPE type_declarations
  30                 | EXCEPTION UIDENT constructor_arguments
  31                 | OPEN UIDENT

  32  par_expr : seq_expr
  33           | seq_expr BARBAR par_expr
  34           | seq_expr BARGRATER par_expr

  35  seq_expr : expr
  36           | expr SEMI
  37           | expr SEMI seq_expr

  38  expr : simple_expr
  39       | simple_expr simple_expr_list
  40       | LET rec_flag let_bindings IN par_expr
  41       | FUNCTION opt_bar match_cases
  42       | FUN simple_pattern fun_def
  43       | MATCH par_expr WITH opt_bar match_cases
  44       | TRY par_expr WITH opt_bar match_cases
  45       | TRY par_expr WITH error
  46       | expr_comma_list
  47       | constr_longident simple_expr
  48       | IF par_expr THEN expr ELSE expr
  49       | IF par_expr THEN expr
  50       | WHILE par_expr DO par_expr DONE
  51       | FOR val_ident EQUAL par_expr direction_flag par_expr DO par_expr DONE
  52       | FOR val_ident EQUAL par_expr direction_flag par_expr DOPAR par_expr DONE
  53       | expr COLONCOLON expr
  54       | expr INFIXOP0 expr
  55       | expr INFIXOP1 expr
  56       | expr INFIXOP2 expr
  57       | expr INFIXOP3 expr
  58       | expr INFIXOP4 expr
  59       | expr PLUS expr
  60       | expr MINUS expr
  61       | expr MINUSDOT expr
  62       | expr STAR expr
  63       | expr EQUAL expr
  64       | expr LESS expr
  65       | expr GREATER expr
  66       | expr OR expr
  67       | expr AMPERSAND expr
  68       | expr AMPERAMPER expr
  69       | expr COLONEQUAL expr
  70       | subtractive expr
  71       | simple_expr DOT label_longident LESSMINUS expr
  72       | simple_expr DOT LPAREN par_expr RPAREN LESSMINUS expr
  73       | simple_expr DOT LBRACKET par_expr RBRACKET LESSMINUS expr
  74       | ASSERT simple_expr
  75       | PRE pre_expr
  76       | LAST QUESTION simple_expr
  77       | DEFAULT QUESTION simple_expr
  78       | EMIT simple_expr
  79       | EMIT simple_expr simple_expr
  80       | SIGNAL signal_comma_list IN par_expr
  81       | SIGNAL signal_comma_list DEFAULT par_expr GATHER par_expr IN par_expr
  82       | SIGNAL signal_comma_list MEMORY par_expr GATHER par_expr IN par_expr
  83       | DO par_expr UNTIL opt_bar until_cases DONE
  84       | DO par_expr WHEN event_config DONE
  85       | CONTROL par_expr WITH event_config DONE
  86       | CONTROL par_expr WITH event_config WHEN par_expr DONE
  87       | PRESENT event_config THEN expr ELSE expr
  88       | PRESENT event_config THEN expr
  89       | PRESENT event_config ELSE expr
  90       | AWAIT await_flag event_config
  91       | AWAIT await_flag event_config IN par_expr
  92       | AWAIT await_flag event_config WHEN par_expr IN par_expr
  93       | PROCESS proc_def
  94       | PROC simple_pattern proc_fun_def
  95       | RUN simple_expr simple_expr_list
  96       | RUN simple_expr

  97  simple_expr : val_longident
  98              | constant
  99              | constr_longident
 100              | LPAREN par_expr RPAREN
 101              | LPAREN par_expr error
 102              | BEGIN par_expr END
 103              | BEGIN END
 104              | BEGIN par_expr error
 105              | LPAREN par_expr type_constraint RPAREN
 106              | simple_expr DOT label_longident
 107              | simple_expr DOT LPAREN par_expr RPAREN
 108              | simple_expr DOT LPAREN par_expr error
 109              | simple_expr DOT LBRACKET par_expr RBRACKET
 110              | simple_expr DOT LBRACKET par_expr error
 111              | LBRACE record_expr RBRACE
 112              | LBRACE record_expr error
 113              | LBRACE simple_expr WITH record_expr RBRACE
 114              | LBRACKETBAR expr_semi_list opt_semi BARRBRACKET
 115              | LBRACKETBAR expr_semi_list opt_semi error
 116              | LBRACKETBAR BARRBRACKET
 117              | LBRACKET expr_semi_list opt_semi RBRACKET
 118              | LBRACKET expr_semi_list opt_semi error
 119              | PREFIXOP simple_expr
 120              | NOTHING
 121              | PAUSE
 122              | HALT
 123              | LOOP par_expr END
 124              | SHARP ident

 125  very_simple_expr : val_longident
 126                   | constant
 127                   | constr_longident
 128                   | BEGIN par_expr END
 129                   | BEGIN END
 130                   | BEGIN par_expr error
 131                   | very_simple_expr DOT label_longident
 132                   | very_simple_expr DOT LPAREN par_expr RPAREN
 133                   | very_simple_expr DOT LPAREN par_expr error
 134                   | very_simple_expr DOT LBRACKET par_expr RBRACKET
 135                   | very_simple_expr DOT LBRACKET par_expr error
 136                   | LBRACE record_expr RBRACE
 137                   | LBRACE record_expr error
 138                   | LBRACE simple_expr WITH record_expr RBRACE
 139                   | LBRACKETBAR expr_semi_list opt_semi BARRBRACKET
 140                   | LBRACKETBAR expr_semi_list opt_semi error
 141                   | LBRACKETBAR BARRBRACKET
 142                   | LBRACKET expr_semi_list opt_semi RBRACKET
 143                   | LBRACKET expr_semi_list opt_semi error
 144                   | PREFIXOP simple_expr
 145                   | NOTHING
 146                   | PAUSE
 147                   | HALT
 148                   | LOOP par_expr END
 149                   | SHARP ident

 150  pre_expr : simple_expr
 151           | QUESTION simple_expr

 152  event_config : very_simple_expr
 153               | very_simple_expr LPAREN pattern RPAREN
 154               | event_config BACKSLASHSLASH event_config
 155               | event_config SLASHBACKSLASH event_config
 156               | LPAREN event_config RPAREN
 157               | LPAREN event_config error

 158  simple_expr_list : simple_expr
 159                   | simple_expr_list simple_expr

 160  let_bindings : let_binding
 161               | let_bindings AND let_binding
 162               | val_longident LESS pattern GREATER

 163  let_binding : val_ident fun_binding
 164              | pattern EQUAL par_expr
 165              | PROCESS val_ident proc_binding

 166  fun_binding : strict_binding
 167              | type_constraint EQUAL par_expr

 168  strict_binding : EQUAL par_expr
 169                 | simple_pattern fun_binding

 170  proc_binding : strict_proc_binding
 171               | type_constraint EQUAL par_expr

 172  strict_proc_binding : EQUAL par_expr
 173                      | simple_pattern proc_binding

 174  match_cases : pattern match_action
 175              | match_cases BAR pattern match_action

 176  fun_def : match_action
 177          | simple_pattern fun_def

 178  proc_fun_def : MINUSGREATER par_expr
 179               | simple_pattern proc_fun_def

 180  proc_def : simple_expr

 181  match_action : MINUSGREATER par_expr
 182               | WHEN par_expr MINUSGREATER par_expr

 183  until_action : MINUSGREATER par_expr
 184               | WHEN par_expr
 185               | WHEN par_expr MINUSGREATER par_expr

 186  expr_comma_list : expr_comma_list COMMA expr
 187                  | expr COMMA expr

 188  record_expr : lbl_expr_list opt_semi

 189  lbl_expr_list : label_longident EQUAL expr
 190                | lbl_expr_list SEMI label_longident EQUAL expr

 191  expr_semi_list : expr
 192                 | expr_semi_list SEMI expr

 193  type_constraint : COLON core_type
 194                  | COLON error

 195  until_cases : event_config
 196              | until_handlers

 197  until_handlers : event_config until_action
 198                 | until_handlers BAR event_config until_action

 199  pattern : simple_pattern
 200          | pattern AS val_ident
 201          | pattern_comma_list
 202          | constr_longident pattern
 203          | pattern COLONCOLON pattern
 204          | pattern BAR pattern

 205  simple_pattern : val_ident
 206                 | UNDERSCORE
 207                 | signed_constant
 208                 | CHAR DOTDOT CHAR
 209                 | constr_longident
 210                 | LBRACE lbl_pattern_list opt_semi RBRACE
 211                 | LBRACE lbl_pattern_list opt_semi error
 212                 | LBRACKET pattern_semi_list opt_semi RBRACKET
 213                 | LBRACKET pattern_semi_list opt_semi error
 214                 | LBRACKETBAR pattern_semi_list opt_semi BARRBRACKET
 215                 | LBRACKETBAR BARRBRACKET
 216                 | LBRACKETBAR pattern_semi_list opt_semi error
 217                 | LPAREN pattern RPAREN
 218                 | LPAREN pattern error
 219                 | LPAREN pattern COLON core_type RPAREN
 220                 | LPAREN pattern COLON core_type error

 221  pattern_comma_list : pattern_comma_list COMMA pattern
 222                     | pattern COMMA pattern

 223  pattern_semi_list : pattern
 224                    | pattern_semi_list SEMI pattern

 225  lbl_pattern_list : label_longident EQUAL pattern
 226                   | lbl_pattern_list SEMI label_longident EQUAL pattern

 227  primitive_declaration : STRING
 228                        | STRING primitive_declaration

 229  type_declarations : type_declaration
 230                    | type_declarations AND type_declaration

 231  type_declaration : type_parameters LIDENT type_kind

 232  type_kind :
 233            | EQUAL core_type
 234            | EQUAL constructor_declarations
 235            | EQUAL BAR constructor_declarations
 236            | EQUAL LBRACE label_declarations opt_semi RBRACE

 237  type_parameters :
 238                  | type_parameter
 239                  | LPAREN type_parameter_list RPAREN

 240  type_parameter : QUOTE ident

 241  type_parameter_list : type_parameter
 242                      | type_parameter_list COMMA type_parameter

 243  constructor_declarations : constructor_declaration
 244                           | constructor_declarations BAR constructor_declaration

 245  constructor_declaration : constr_ident constructor_arguments

 246  constructor_arguments :
 247                        | OF core_type

 248  label_declarations : label_declaration
 249                     | label_declarations SEMI label_declaration

 250  label_declaration : mutable_flag label COLON core_type

 251  core_type : simple_core_type_or_tuple
 252            | core_type MINUSGREATER core_type

 253  simple_core_type : simple_core_type2
 254                   | LPAREN core_type_comma_list RPAREN

 255  simple_core_type2 : QUOTE ident
 256                    | type_longident
 257                    | simple_core_type2 type_longident
 258                    | LPAREN core_type_comma_list RPAREN type_longident
 259                    | simple_core_type PROCESS
 260                    | simple_core_type PROCESS PLUS
 261                    | simple_core_type PROCESS MINUS

 262  simple_core_type_or_tuple : simple_core_type
 263                            | simple_core_type STAR core_type_list

 264  core_type_comma_list : core_type
 265                       | core_type_comma_list COMMA core_type

 266  core_type_list : simple_core_type
 267                 | core_type_list STAR simple_core_type

 268  label : LIDENT

 269  constant : INT
 270           | CHAR
 271           | STRING
 272           | FLOAT
 273           | LPAREN RPAREN
 274           | FALSE
 275           | TRUE

 276  signed_constant : constant
 277                  | MINUS INT
 278                  | MINUS FLOAT

 279  ident : UIDENT
 280        | LIDENT

 281  val_ident : LIDENT
 282            | LPAREN operator RPAREN

 283  val_ident_colon : LIDENT COLON
 284                  | LPAREN operator RPAREN COLON
 285                  | LABEL

 286  operator : PREFIXOP
 287           | INFIXOP0
 288           | INFIXOP1
 289           | INFIXOP2
 290           | INFIXOP3
 291           | INFIXOP4
 292           | PLUS
 293           | MINUS
 294           | MINUSDOT
 295           | STAR
 296           | EQUAL
 297           | LESS
 298           | GREATER
 299           | OR
 300           | AMPERSAND
 301           | AMPERAMPER
 302           | COLONEQUAL

 303  constr_ident : UIDENT
 304               | COLONCOLON

 305  val_longident : val_ident
 306                | UIDENT DOT val_ident

 307  constr_longident : UIDENT
 308                   | UIDENT DOT UIDENT
 309                   | LBRACKET RBRACKET

 310  label_longident : LIDENT
 311                  | UIDENT DOT LIDENT

 312  type_longident : LIDENT
 313                 | UIDENT DOT LIDENT

 314  signal_decl : LIDENT
 315              | LIDENT COLON core_type

 316  signal_comma_list : signal_decl
 317                    | signal_comma_list COMMA signal_decl

 318  rec_flag :
 319           | REC

 320  direction_flag : TO
 321                 | DOWNTO

 322  mutable_flag :
 323               | MUTABLE

 324  await_flag :
 325             | IMMEDIATE
 326             | ONE
 327             | IMMEDIATE ONE

 328  opt_bar :
 329          | BAR

 330  opt_semi :
 331           | SEMI

 332  subtractive : MINUS
 333              | MINUSDOT

 334  lucky_declarations : LBRACE RBRACE
 335                     | LBRACE lucky_declarations2 opt_semi RBRACE

 336  lucky_declarations2 : lucky_declaration
 337                      | lucky_declarations2 SEMI lucky_declaration

 338  lucky_declaration : lucky_label COLON core_type

 339  lucky_label : LIDENT
 340              | UIDENT

 341  lucky_files : LBRACKET string_semi_list opt_semi RBRACKET
 342              | LBRACKET string_semi_list opt_semi error

 343  string_semi_list : constant
 344                   | string_semi_list SEMI constant

 345  %entry% : '\001' implementation
 346          | '\002' interface
 347          | '\003' interactive

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	'\002'  shift 2
	'\003'  shift 3
	.  error

	%entry%  goto 4


state 1
	%entry% : '\001' . implementation  (345)
	structure_tail : .  (10)

	ASSERT  shift 5
	AWAIT  shift 6
	BEGIN  shift 7
	CHAR  shift 8
	CONTROL  shift 9
	DEFAULT  shift 10
	DO  shift 11
	EMIT  shift 12
	EXCEPTION  shift 13
	EXTERNAL  shift 14
	FALSE  shift 15
	FLOAT  shift 16
	FOR  shift 17
	FUN  shift 18
	FUNCTION  shift 19
	HALT  shift 20
	IF  shift 21
	INT  shift 22
	LAST  shift 23
	LBRACE  shift 24
	LBRACKET  shift 25
	LBRACKETBAR  shift 26
	LET  shift 27
	LIDENT  shift 28
	LOOP  shift 29
	LPAREN  shift 30
	MATCH  shift 31
	MINUS  shift 32
	MINUSDOT  shift 33
	NOTHING  shift 34
	OPEN  shift 35
	PAUSE  shift 36
	PRE  shift 37
	PREFIXOP  shift 38
	PRESENT  shift 39
	PROC  shift 40
	PROCESS  shift 41
	RUN  shift 42
	SEMISEMI  shift 43
	SHARP  shift 44
	SIGNAL  shift 45
	STRING  shift 46
	TRUE  shift 47
	TRY  shift 48
	TYPE  shift 49
	UIDENT  shift 50
	WHILE  shift 51
	EOF  reduce 10

	implementation  goto 52
	structure  goto 53
	seq_expr  goto 54
	structure_item  goto 55
	structure_tail  goto 56
	constr_longident  goto 57
	expr  goto 58
	simple_expr  goto 59
	expr_comma_list  goto 60
	val_ident  goto 61
	subtractive  goto 62
	val_longident  goto 63
	constant  goto 64


state 2
	%entry% : '\002' . interface  (346)
	signature : .  (24)

	.  reduce 24

	interface  goto 65
	signature  goto 66


state 3
	%entry% : '\003' . interactive  (347)
	interactive : .  (3)

	ASSERT  shift 5
	AWAIT  shift 6
	BEGIN  shift 7
	CHAR  shift 8
	CONTROL  shift 9
	DEFAULT  shift 10
	DO  shift 11
	EMIT  shift 12
	EXCEPTION  shift 13
	EXTERNAL  shift 14
	FALSE  shift 15
	FLOAT  shift 16
	FOR  shift 17
	FUN  shift 18
	FUNCTION  shift 19
	HALT  shift 20
	IF  shift 21
	INT  shift 22
	LAST  shift 23
	LBRACE  shift 24
	LBRACKET  shift 25
	LBRACKETBAR  shift 26
	LET  shift 27
	LIDENT  shift 28
	LOOP  shift 29
	LPAREN  shift 30
	MATCH  shift 31
	MINUS  shift 32
	MINUSDOT  shift 33
	NOTHING  shift 34
	OPEN  shift 35
	PAUSE  shift 36
	PRE  shift 37
	PREFIXOP  shift 38
	PRESENT  shift 39
	PROC  shift 40
	PROCESS  shift 41
	RUN  shift 42
	SHARP  shift 44
	SIGNAL  shift 45
	STRING  shift 46
	TRUE  shift 47
	TRY  shift 48
	TYPE  shift 49
	UIDENT  shift 50
	WHILE  shift 51
	$end  reduce 3

	interactive  goto 67
	interactive_defs  goto 68
	seq_expr  goto 69
	structure_item  goto 70
	constr_longident  goto 57
	expr  goto 58
	simple_expr  goto 59
	expr_comma_list  goto 60
	val_ident  goto 61
	subtractive  goto 62
	val_longident  goto 63
	constant  goto 64


state 4
	$accept : %entry% . $end  (0)

	$end  accept


state 5
	expr : ASSERT . simple_expr  (74)

	BEGIN  shift 7
	CHAR  shift 8
	FALSE  shift 15
	FLOAT  shift 16
	HALT  shift 20
	INT  shift 22
	LBRACE  shift 24
	LBRACKET  shift 25
	LBRACKETBAR  shift 26
	LIDENT  shift 28
	LOOP  shift 29
	LPAREN  shift 30
	NOTHING  shift 34
	PAUSE  shift 36
	PREFIXOP  shift 38
	SHARP  shift 44
	STRING  shift 46
	TRUE  shift 47
	UIDENT  shift 50
	.  error

	constr_longident  goto 71
	simple_expr  goto 72
	val_ident  goto 61
	val_longident  goto 63
	constant  goto 64


state 6
	expr : AWAIT . await_flag event_config  (90)
	expr : AWAIT . await_flag event_config IN par_expr  (91)
	expr : AWAIT . await_flag event_config WHEN par_expr IN par_expr  (92)
	await_flag : .  (324)

	IMMEDIATE  shift 73
	ONE  shift 74
	BEGIN  reduce 324
	CHAR  reduce 324
	FALSE  reduce 324
	FLOAT  reduce 324
	HALT  reduce 324
	INT  reduce 324
	LBRACE  reduce 324
	LBRACKET  reduce 324
	LBRACKETBAR  reduce 324
	LIDENT  reduce 324
	LOOP  reduce 324
	LPAREN  reduce 324
	NOTHING  reduce 324
	PAUSE  reduce 324
	PREFIXOP  reduce 324
	SHARP  reduce 324
	STRING  reduce 324
	TRUE  reduce 324
	UIDENT  reduce 324

	await_flag  goto 75


state 7
	simple_expr : BEGIN . par_expr END  (102)
	simple_expr : BEGIN . END  (103)
	simple_expr : BEGIN . par_expr error  (104)

	ASSERT  shift 5
	AWAIT  shift 6
	BEGIN  shift 7
	CHAR  shift 8
	CONTROL  shift 9
	DEFAULT  shift 10
	DO  shift 11
	EMIT  shift 12
	END  shift 76
	FALSE  shift 15
	FLOAT  shift 16
	FOR  shift 17
	FUN  shift 18
	FUNCTION  shift 19
	HALT  shift 20
	IF  shift 21
	INT  shift 22
	LAST  shift 23
	LBRACE  shift 24
	LBRACKET  shift 25
	LBRACKETBAR  shift 26
	LET  shift 77
	LIDENT  shift 28
	LOOP  shift 29
	LPAREN  shift 30
	MATCH  shift 31
	MINUS  shift 32
	MINUSDOT  shift 33
	NOTHING  shift 34
	PAUSE  shift 36
	PRE  shift 37
	PREFIXOP  shift 38
	PRESENT  shift 39
	PROC  shift 40
	PROCESS  shift 41
	RUN  shift 42
	SHARP  shift 44
	SIGNAL  shift 78
	STRING  shift 46
	TRUE  shift 47
	TRY  shift 48
	UIDENT  shift 50
	WHILE  shift 51
	.  error

	seq_expr  goto 79
	par_expr  goto 80
	constr_longident  goto 57
	expr  goto 58
	simple_expr  goto 59
	expr_comma_list  goto 60
	val_ident  goto 61
	subtractive  goto 62
	val_longident  goto 63
	constant  goto 64


state 8
	constant : CHAR .  (270)

	.  reduce 270


state 9
	expr : CONTROL . par_expr WITH event_config DONE  (85)
	expr : CONTROL . par_expr WITH event_config WHEN par_expr DONE  (86)

	ASSERT  shift 5
	AWAIT  shift 6
	BEGIN  shift 7
	CHAR  shift 8
	CONTROL  shift 9
	DEFAULT  shift 10
	DO  shift 11
	EMIT  shift 12
	FALSE  shift 15
	FLOAT  shift 16
	FOR  shift 17
	FUN  shift 18
	FUNCTION  shift 19
	HALT  shift 20
	IF  shift 21
	INT  shift 22
	LAST  shift 23
	LBRACE  shift 24
	LBRACKET  shift 25
	LBRACKETBAR  shift 26
	LET  shift 77
	LIDENT  shift 28
	LOOP  shift 29
	LPAREN  shift 30
	MATCH  shift 31
	MINUS  shift 32
	MINUSDOT  shift 33
	NOTHING  shift 34
	PAUSE  shift 36
	PRE  shift 37
	PREFIXOP  shift 38
	PRESENT  shift 39
	PROC  shift 40
	PROCESS  shift 41
	RUN  shift 42
	SHARP  shift 44
	SIGNAL  shift 78
	STRING  shift 46
	TRUE  shift 47
	TRY  shift 48
	UIDENT  shift 50
	WHILE  shift 51
	.  error

	seq_expr  goto 79
	par_expr  goto 81
	constr_longident  goto 57
	expr  goto 58
	simple_expr  goto 59
	expr_comma_list  goto 60
	val_ident  goto 61
	subtractive  goto 62
	val_longident  goto 63
	constant  goto 64


state 10
	expr : DEFAULT . QUESTION simple_expr  (77)

	QUESTION  shift 82
	.  error


state 11
	expr : DO . par_expr UNTIL opt_bar until_cases DONE  (83)
	expr : DO . par_expr WHEN event_config DONE  (84)

	ASSERT  shift 5
	AWAIT  shift 6
	BEGIN  shift 7
	CHAR  shift 8
	CONTROL  shift 9
	DEFAULT  shift 10
	DO  shift 11
	EMIT  shift 12
	FALSE  shift 15
	FLOAT  shift 16
	FOR  shift 17
	FUN  shift 18
	FUNCTION  shift 19
	HALT  shift 20
	IF  shift 21
	INT  shift 22
	LAST  shift 23
	LBRACE  shift 24
	LBRACKET  shift 25
	LBRACKETBAR  shift 26
	LET  shift 77
	LIDENT  shift 28
	LOOP  shift 29
	LPAREN  shift 30
	MATCH  shift 31
	MINUS  shift 32
	MINUSDOT  shift 33
	NOTHING  shift 34
	PAUSE  shift 36
	PRE  shift 37
	PREFIXOP  shift 38
	PRESENT  shift 39
	PROC  shift 40
	PROCESS  shift 41
	RUN  shift 42
	SHARP  shift 44
	SIGNAL  shift 78
	STRING  shift 46
	TRUE  shift 47
	TRY  shift 48
	UIDENT  shift 50
	WHILE  shift 51
	.  error

	seq_expr  goto 79
	par_expr  goto 83
	constr_longident  goto 57
	expr  goto 58
	simple_expr  goto 59
	expr_comma_list  goto 60
	val_ident  goto 61
	subtractive  goto 62
	val_longident  goto 63
	constant  goto 64


state 12
	expr : EMIT . simple_expr  (78)
	expr : EMIT . simple_expr simple_expr  (79)

	BEGIN  shift 7
	CHAR  shift 8
	FALSE  shift 15
	FLOAT  shift 16
	HALT  shift 20
	INT  shift 22
	LBRACE  shift 24
	LBRACKET  shift 25
	LBRACKETBAR  shift 26
	LIDENT  shift 28
	LOOP  shift 29
	LPAREN  shift 30
	NOTHING  shift 34
	PAUSE  shift 36
	PREFIXOP  shift 38
	SHARP  shift 44
	STRING  shift 46
	TRUE  shift 47
	UIDENT  shift 50
	.  error

	constr_longident  goto 71
	simple_expr  goto 84
	val_ident  goto 61
	val_longident  goto 63
	constant  goto 64


state 13
	structure_item : EXCEPTION . UIDENT constructor_arguments  (20)
	structure_item : EXCEPTION . UIDENT EQUAL constr_longident  (21)

	UIDENT  shift 85
	.  error


state 14
	structure_item : EXTERNAL . DOT LIDENT LIDENT lucky_declarations lucky_declarations EQUAL lucky_files  (23)

	DOT  shift 86
	.  error


state 15
	constant : FALSE .  (274)

	.  reduce 274


state 16
	constant : FLOAT .  (272)

	.  reduce 272


state 17
	expr : FOR . val_ident EQUAL par_expr direction_flag par_expr DO par_expr DONE  (51)
	expr : FOR . val_ident EQUAL par_expr direction_flag par_expr DOPAR par_expr DONE  (52)

	LIDENT  shift 28
	LPAREN  shift 87
	.  error

	val_ident  goto 88


state 18
	expr : FUN . simple_pattern fun_def  (42)

	CHAR  shift 89
	FALSE  shift 15
	FLOAT  shift 16
	INT  shift 22
	LBRACE  shift 90
	LBRACKET  shift 91
	LBRACKETBAR  shift 92
	LIDENT  shift 28
	LPAREN  shift 93
	MINUS  shift 94
	STRING  shift 46
	TRUE  shift 47
	UIDENT  shift 95
	UNDERSCORE  shift 96
	.  error

	constr_longident  goto 97
	simple_pattern  goto 98
	val_ident  goto 99
	constant  goto 100
	signed_constant  goto 101


state 19
	expr : FUNCTION . opt_bar match_cases  (41)
	opt_bar : .  (328)

	BAR  shift 102
	CHAR  reduce 328
	FALSE  reduce 328
	FLOAT  reduce 328
	INT  reduce 328
	LBRACE  reduce 328
	LBRACKET  reduce 328
	LBRACKETBAR  reduce 328
	LIDENT  reduce 328
	LPAREN  reduce 328
	MINUS  reduce 328
	STRING  reduce 328
	TRUE  reduce 328
	UIDENT  reduce 328
	UNDERSCORE  reduce 328

	opt_bar  goto 103


state 20
	simple_expr : HALT .  (122)

	.  reduce 122


state 21
	expr : IF . par_expr THEN expr ELSE expr  (48)
	expr : IF . par_expr THEN expr  (49)

	ASSERT  shift 5
	AWAIT  shift 6
	BEGIN  shift 7
	CHAR  shift 8
	CONTROL  shift 9
	DEFAULT  shift 10
	DO  shift 11
	EMIT  shift 12
	FALSE  shift 15
	FLOAT  shift 16
	FOR  shift 17
	FUN  shift 18
	FUNCTION  shift 19
	HALT  shift 20
	IF  shift 21
	INT  shift 22
	LAST  shift 23
	LBRACE  shift 24
	LBRACKET  shift 25
	LBRACKETBAR  shift 26
	LET  shift 77
	LIDENT  shift 28
	LOOP  shift 29
	LPAREN  shift 30
	MATCH  shift 31
	MINUS  shift 32
	MINUSDOT  shift 33
	NOTHING  shift 34
	PAUSE  shift 36
	PRE  shift 37
	PREFIXOP  shift 38
	PRESENT  shift 39
	PROC  shift 40
	PROCESS  shift 41
	RUN  shift 42
	SHARP  shift 44
	SIGNAL  shift 78
	STRING  shift 46
	TRUE  shift 47
	TRY  shift 48
	UIDENT  shift 50
	WHILE  shift 51
	.  error

	seq_expr  goto 79
	par_expr  goto 104
	constr_longident  goto 57
	expr  goto 58
	simple_expr  goto 59
	expr_comma_list  goto 60
	val_ident  goto 61
	subtractive  goto 62
	val_longident  goto 63
	constant  goto 64


state 22
	constant : INT .  (269)

	.  reduce 269


state 23
	expr : LAST . QUESTION simple_expr  (76)

	QUESTION  shift 105
	.  error


state 24
	simple_expr : LBRACE . record_expr RBRACE  (111)
	simple_expr : LBRACE . record_expr error  (112)
	simple_expr : LBRACE . simple_expr WITH record_expr RBRACE  (113)

	BEGIN  shift 7
	CHAR  shift 8
	FALSE  shift 15
	FLOAT  shift 16
	HALT  shift 20
	INT  shift 22
	LBRACE  shift 24
	LBRACKET  shift 25
	LBRACKETBAR  shift 26
	LIDENT  shift 106
	LOOP  shift 29
	LPAREN  shift 30
	NOTHING  shift 34
	PAUSE  shift 36
	PREFIXOP  shift 38
	SHARP  shift 44
	STRING  shift 46
	TRUE  shift 47
	UIDENT  shift 107
	.  error

	constr_longident  goto 71
	simple_expr  goto 108
	val_ident  goto 61
	label_longident  goto 109
	val_longident  goto 63
	constant  goto 64
	record_expr  goto 110
	lbl_expr_list  goto 111


state 25
	simple_expr : LBRACKET . expr_semi_list opt_semi RBRACKET  (117)
	simple_expr : LBRACKET . expr_semi_list opt_semi error  (118)
	constr_longident : LBRACKET . RBRACKET  (309)
